# anime-build

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: preflight.yml  release.yml
crates/codegen/xai-file-utils/: Cargo.toml
crates/codegen/xai-file-utils/src/: gcs.rs  lib.rs  queue.rs  storage_client.rs  trace_context.rs
crates/codegen/xai-grok-agent/src/: builder.rs  config.rs
crates/codegen/xai-grok-agent/src/prompt/: prompt_encrypted.rs
crates/codegen/xai-grok-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/xai-grok-config-types/src/: lib.rs
crates/codegen/xai-grok-mcp/src/: lib.rs
crates/codegen/xai-grok-models/: default_models.json
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-render/src/: prompt_images.rs
crates/codegen/xai-grok-pager-render/src/gboom/: mod.rs
crates/codegen/xai-grok-pager/docs/user-guide/: 04-slash-commands.md
crates/codegen/xai-grok-pager/src/: tracing.rs
crates/codegen/xai-grok-pager/src/acp/: mod.rs  tracker.rs
crates/codegen/xai-grok-pager/src/app/: app_view.rs  cli.rs
crates/codegen/xai-grok-pager/src/scrollback/state/: layout.rs
crates/codegen/xai-grok-pager/src/slash/commands/: mod.rs
crates/codegen/xai-grok-sampler/src/: client.rs
crates/codegen/xai-grok-sampler/src/stream/: responses.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-shell/skills/imagine/: SKILL.md
crates/codegen/xai-grok-shell/src/: cli_models.rs
crates/codegen/xai-grok-shell/src/agent/: auth_method.rs  config.rs  models.rs
crates/codegen/xai-grok-shell/src/auth/: attribution.rs  credential_provider.rs  flow.rs  mod.rs  openai_codex.rs
crates/codegen/xai-grok-shell/src/config/: mod.rs  tests.rs
crates/codegen/xai-grok-shell/src/session/: acp_conversion.rs  agent_rebuild.rs
crates/codegen/xai-grok-shell/src/test_support/: lsp_runtime.rs
crates/codegen/xai-grok-telemetry/: Cargo.toml
crates/codegen/xai-grok-telemetry/src/: client.rs  events.rs  external_noop.rs  lib.rs  otel_layer_noop.rs  sentry.rs  session_ctx.rs
crates/codegen/xai-grok-tools/: Cargo.toml
crates/codegen/xai-grok-tools-api/src/: slash_commands.rs
crates/codegen/xai-grok-tools/schema/: tool_meta.schema.json
crates/codegen/xai-grok-tools/src/: attribution.rs  normalization.rs  tool_taxonomy.rs
crates/codegen/xai-grok-tools/src/registry/: types.rs
crates/codegen/xai-grok-tools/src/reminders/: task_completion.rs
crates/codegen/xai-grok-tools/src/types/: output.rs  tool.rs  tool_io.rs
crates/codegen/xai-grok-workspace/: Cargo.toml
crates/codegen/xai-grok-workspace/src/: capability.rs  handle.rs
crates/codegen/xai-grok-workspace/src/session/: tool_config.rs
crates/common/xai-computer-hub-mcp-adapter/: Cargo.toml
crates/common/xai-computer-hub-mcp-adapter/src/: metrics.rs
crates/common/xai-computer-hub-sdk/: Cargo.toml
crates/common/xai-computer-hub-sdk/src/: server.rs
crates/common/xai-tool-protocol/tests/: serde_roundtrip.rs
crates/common/xai-tool-runtime/src/: render.rs
docs/superpowers/plans/: 2026-07-19-minimal-local-build.md
docs/superpowers/specs/: 2026-07-19-minimal-local-build-design.md
scripts/: cargo-rustc-wrapper  install.ps1  install.sh
(+16 files in other folders)
