[package]
license = "Apache-2.0"
name = "xai-computer-hub-sdk"
version = "0.1.0"
edition.workspace = true
description = "SDK for the xAI Computer Hub: connection pool, transparent reconnect, tool harness, and tool-server runtime."

[dependencies]
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
# Local spans are retained for Computer Hub request handling; no exporter is configured.
fastrace = { workspace = true, features = ["enable"] }

xai-tool-protocol = { workspace = true }
xai-tool-runtime = { workspace = true }
xai-tool-types = { workspace = true }
xai-computer-hub-core = { workspace = true }

# Integration tests that need heavier backend deps live in a separate sibling crate to keep this dev-dep set minimal.
[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
axum = { workspace = true, features = ["ws", "macros"] }
chrono = { workspace = true }
base64 = { workspace = true }
schemars = { workspace = true }

[lints]
workspace = true
